Fixed various misalignment issues with logo, header links, and on page nav toggler on small screens

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -20,6 +20,26 @@ body {
 /********************************/
 /* TILE38 SPECIFIC CSS
 /********************************/
+h1 {
+  font-size: 38px;
+}
+h2 {
+  font-size: 32px;
+}
+h3 {
+  font-size: 26px;
+}
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 34px;
+  }
+  h2 {
+    font-size: 29px;
+  }
+  h3 {
+    font-size: 22px;
+  }
+}
 .w100 {
   font-weight: 100;
 }
@@ -46,6 +66,10 @@ body {
 }
 .w900 {
   font-weight: 900;
+}
+
+h1.w400 {
+  margin-top: 0;
 }
 
 .with-love::before {
@@ -532,7 +556,13 @@ div.more {
   /* remove white space b/t log and navbar */
   ul.nav-site.nav-site-internal {
     margin-top: 60px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   }
+
+  ul.nav-site.nav-site-internal li {
+    flex: 1 1;
+  }
+
   .docsNavContainer {
     margin-top: 10px;
   }
@@ -553,6 +583,7 @@ div.more {
   /* bring onPageNav to front if hamburger button has been toggled first */
   .tocActive .onPageNav {
     z-index: 999;
+    top: 160px;
   }
 
   /* add padding to onPageNav toc headings when toggled */
